# tiktok

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  cli.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
app/: __init__.py  auth.py  cache.py  config.py  database.py  error_handling.py  logging_config.py  main.py  metrics.py  prompts.py
app/api/: __init__.py  assets.py  auth.py  batch.py  billing.py  chat.py  downloads.py  presets.py  projects.py  renders.py  styles.py
app/middleware/: __init__.py  rate_limiting.py
app/models/: __init__.py  db.py  schemas.py
app/services/: __init__.py  ai_orchestrator.py  batch.py  billing.py  chat_processor.py  media_analyzer.py  render_engine.py  storage.py  style_presets.py
app/workers/: __init__.py  celery_app.py  tasks.py
docs/: API.md  ARCHITECTURE.md  CHAT_GUIDE.md  CHAT_IMPLEMENTATION.md  COMPLETION_100.md  PRD.md  RUNBOOK.md
examples/: content.txt  reference_1.txt  reference_2.txt
frontend/: Dockerfile  nginx.conf  package-lock.json  tsconfig.json
frontend/src/: App.tsx  api.ts  index.css
k8s/production/: deployment.yaml
migrations/: env.py
migrations/versions/: 001_chat_tables.py  add_api_keys.py
mobile/: app.json  package-lock.json  package.json  tsconfig.json
mobile/app/: _layout.tsx  index.tsx
mobile/src/: theme.ts
scripts/: load_test.py
tests/: __init__.py  conftest.py
tests/e2e/: test_workflows.py
tests/unit/: test_models.py  (+3 more)
tiktok_engine/: __init__.py  llm_client.py  models.py  pipeline.py  prompts.py
(+17 files in other folders)
