[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-engine"
version = "0.1.0"
description = "AI-powered TikTok edit plan generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
]

[project.scripts]
tiktok-engine = "cli:main"

[tool.setuptools.packages.find]
include = ["tiktok_engine*"]
